--- a/pom.xml
+++ b/pom.xml
@@ -696,7 +696,7 @@
 	<modules>
 		<module>ots-rs-face</module>
 		<module>ots-rs-biz</module>
-		<module>ots-od-biz</module>
+		<module>ots-ord-biz</module>
 		<module>ots-ord-face</module>
 		<module>ots-pay-face</module>
 		<module>ots-pay-biz</module>
