--- a/ots-fun-face/pom.xml
+++ b/ots-fun-face/pom.xml
@@ -6,8 +6,8 @@
 		<artifactId>ots-all-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>ots-rs-face</artifactId>
-	<name>ots-rs-face</name>
+	<artifactId>ots-fun-face</artifactId>
+	<name>ots-fun-face</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
