--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -743,12 +743,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mk</groupId>
-			<artifactId>ots-rs-face</artifactId>
+			<artifactId>ots-fun-face</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mk</groupId>
-			<artifactId>ots-rs-biz</artifactId>
+			<artifactId>ots-fun-biz</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
