--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -803,6 +803,11 @@
 			<artifactId>ots-pro-biz</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.mk</groupId>
+			<artifactId>ots-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>ots</finalName>
