添加entities工程。用来放所有接口工程（face工程）依赖的entity

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@
 /ots-pay-face/.settings
 /ots-pro-biz/.settings
 /ots-pro-face/.settings
+/ots-entities/.settings
+/ots-entities/.project
+/ots-entities/.classpath
