--- a/ots-entities/pom.xml
+++ b/ots-entities/pom.xml
@@ -7,17 +7,18 @@
     <artifactId>ots-all-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>ots-pay-face</artifactId>
-  <name>ots-pay-face</name>
+  <artifactId>ots-entities</artifactId>
+  <name>ots-entities</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-  	<dependency>
-  		<groupId>com.mk</groupId>
-  		<artifactId>ots-entities</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
