--- a/ots-ord-face/pom.xml
+++ b/ots-ord-face/pom.xml
@@ -12,4 +12,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.mk</groupId>
+			<artifactId>ots-entities</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
