--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 			,/hotel,/room,/cache,/verifycode/send,/verifycode/sendCode,/verifycode/verify,/roomstate,/score/querylist
 			,/score/subject/querylist,/scoregroupcount,/pay/create,/pay/check,/pay/findpay,/active/querylist,/systime,/picwindinfo
 			,/picurl,/appstatus,/schedule,/hms,/order/changeprice,/pay/alires,/pay/hmsfindpay,/pay/wxres,/pay/alicancel,/pay/weixin,/message/report
-			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend
+			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend,/wallet
 
 			</param-value>
 		</init-param>
@@ -57,7 +57,7 @@
 		<filter-name>cross-domainfilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+<!--
 	<filter>
 		<filter-name>cat-filter</filter-name>
 		<filter-class>com.dianping.cat.servlet.CatFilter</filter-class>
@@ -68,7 +68,7 @@
 		<dispatcher>REQUEST</dispatcher>
 		<dispatcher>FORWARD</dispatcher>
 	</filter-mapping>
-
+-->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
