--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1452,9 +1452,6 @@
 		
 		<profile>
 			<id>shanghai-simulation2</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
 			<properties>
 				<label>product</label>
 				<jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
@@ -1466,11 +1463,11 @@
 				<slave.jdbc.password>j9bcyZ5U5LQp7xxEomsu</slave.jdbc.password>
 				<!-- <slave.jdbc.url><![CDATA[jdbc:mysql://10.4.28.44:3306/ots?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8]]></slave.jdbc.url> <slave.jdbc.user>smlt-reader</slave.jdbc.user> <slave.jdbc.password>ims8LfQKTBs6gj79TdgB</slave.jdbc.password> -->
 				<spring.redis.sentinel.master>ota2-test-redis</spring.redis.sentinel.master>
-				<spring.redis.sentinel.nodes>192.168.81.87:26379</spring.redis.sentinel.nodes>
+				<spring.redis.sentinel.nodes>10.4.20.206:26379</spring.redis.sentinel.nodes>
 				<synserver.ip>10.4.17.121</synserver.ip>
 				<synserver.port>8000</synserver.port>
-				<elasticsearch.clusterhosts>192.168.81.87:9300</elasticsearch.clusterhosts>
-				<elasticsearch.clustername>smlt-ots</elasticsearch.clustername>
+				<elasticsearch.clusterhosts>10.4.32.10:9300</elasticsearch.clusterhosts>
+				<elasticsearch.clustername>smlt-elasticsearch</elasticsearch.clustername>
 				<elasticsearch.index>ots</elasticsearch.index>
 				<elasticsearch.type>hotel</elasticsearch.type>
 				<hessian_soap>http://10.4.26.201:8082/soap/hessian</hessian_soap>
@@ -1497,9 +1494,6 @@
 
 				<!-- BMS黑名单验证接口 -->
 				<blacklist.url>http://10.4.37.251:8080/check</blacklist.url>
-
-				<!-- 特价房查询接口 -->
-				<roomsale.url>http://127.0.0.1:8080/taskfactory/roomsale/querysaleroom</roomsale.url>
 				<!-- 推送消息配置 0：测试环境 1：生产环境 -->
 				<sendmess.testorformal>0</sendmess.testorformal>
 				<black_Switch>1</black_Switch>
