add promoservice interface

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,7 @@ catalina.base_IS_UNDEFINED/
 .metadata/
 .recommenders/
 RemoteSystemsTempFiles/
+ots-web/pom.xml.bak
+ots-web/src/main/java/com/mk/ots/roomsale/service/impl/.gitignore
 *.swp
 *.swo
