#r bill day promo  job

--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -957,6 +957,17 @@
                     <overwrite>true</overwrite>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.1.v20140609</version>
+                <configuration>
+                    <webApp>
+                        <contextPath>/ots</contextPath>
+                        <!-- <contextPath>/${project.artifactId}</contextPath> -->
+                    </webApp>
+                </configuration>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
