--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -933,6 +933,17 @@
             </plugin>
 
 
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.1.v20140609</version>
+                <configuration>
+                    <webApp>
+                        <contextPath>/ots</contextPath>
+                        <!-- <contextPath>/${project.artifactId}</contextPath> -->
+                    </webApp>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.liquibase</groupId>
