--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /ots-web/.project
 /ots-web/.settings
+
 /ots-web/bin
 /ots-web/target
 /ots-web/.classpath
@@ -50,3 +51,5 @@ ots-web/src/main/java/com/mk/ots/roomsale/service/impl/.gitignore
 *.swp
 /Servers
 *.swo
+_pasted_code_/
+
