--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1280,7 +1280,7 @@
         <profile>
             <id>dump-simulation</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
                 <label>product</label>
