--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 		<filter-class>com.mk.ots.system.interceptor.CrossDomainFilter</filter-class>
 		<init-param>
 			<param-name>crossDomainPatterns</param-name>
-			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck,/ticket/nologintryluck,/verifycode/send, </param-value>
+			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck,/ticket/nologintryluck,/verifycode/send,/verifycode/verify </param-value>
 		</init-param>
 	</filter>
 
