--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 			,/score/subject/querylist,/scoregroupcount,/pay/create,/pay/check,/pay/findpay,/active/querylist,/systime,/picwindinfo
 			,/picurl,/appstatus,/schedule,/hms,/order/changeprice,/pay/alires,/pay/hmsfindpay,/pay/wxres,/pay/alicancel,/pay/weixin,/message/report
 			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend,/roomsale,/hotel/updatemikepricecache,/promo,/promo/querytypelist
-			,/admin/report/launchPromo,/admin/report,/ticket/tryluck,/ticket/nologintryluck,/ticket/uuid
+			,/admin/report/launchPromo,/admin/report,/ticket/tryluck,/ticket/nologintryluck,/ticket/uuid,/ticket/queryallluck
 
 
 			</param-value>
@@ -51,7 +51,7 @@
 		<filter-class>com.mk.ots.system.interceptor.CrossDomainFilter</filter-class>
 		<init-param>
 			<param-name>crossDomainPatterns</param-name>
-			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck,/ticket/nologintryluck,/verifycode/send,/verifycode/verify,/unionidandphone/check,/ticket/uuid </param-value>
+			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck,/ticket/nologintryluck,/verifycode/send,/verifycode/verify,/unionidandphone/check,/ticket/uuid,/ticket/queryallluck </param-value>
 		</init-param>
 	</filter>
 
