--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -819,11 +819,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.ctc</groupId>
-            <artifactId>smscloud</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.ctc</groupId>-->
+            <!--<artifactId>smscloud</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.activation</groupId>
