fix pom add apidoc

--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1490,7 +1490,7 @@
                 <slave.jdbc.user>smlt-writer</slave.jdbc.user>
                 <slave.jdbc.password>j9bcyZ5U5LQp7xxEomsu</slave.jdbc.password>
                 <!-- <slave.jdbc.url><![CDATA[jdbc:mysql://10.4.28.44:3306/ots?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8]]></slave.jdbc.url> <slave.jdbc.user>smlt-reader</slave.jdbc.user> <slave.jdbc.password>ims8LfQKTBs6gj79TdgB</slave.jdbc.password> -->
-                <spring.redis.sentinel.master>ots-smlt-bj-redis</spring.redis.sentinel.master>
+                <spring.redis.sentinel.master>smlt-elasticsearch</spring.redis.sentinel.master>
                 <spring.redis.sentinel.nodes>10.10.115.57:26379</spring.redis.sentinel.nodes>
                 <synserver.ip>10.10.124.247</synserver.ip>
                 <synserver.port>8000</synserver.port>
