--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1500,14 +1500,14 @@
                 <elasticsearch.type>hotel</elasticsearch.type>
                 <hessian_soap>http://10.10.131.104:8085/soap/hessian</hessian_soap>
                 <hessian_bms>http://sms.imike.cn/</hessian_bms>
-                <newpms.url>https://otai.imike.cn/otai/ots2pms</newpms.url>
+                <newpms.url>https://smlt-otai.imike.cn/otai/ots2pms</newpms.url>
                 <jedis.pool.maxidl>20</jedis.pool.maxidl>
                 <jedis.pool.minidl>8</jedis.pool.minidl>
                 <jedis.pool.maxtotal>500</jedis.pool.maxtotal>
-                <addpay>https://otai.imike.cn/otai/ots2pms/addpay</addpay>
-                <cancelpay>https://otai.imike.cn/otai/ots2pms/cancelpay</cancelpay>
-                <selectCustomerpay>https://otai.imike.cn/otai/ots2pms/selectcustomerpay</selectCustomerpay>
-                <cancelpaybyerror>https://otai.imike.cn/otai/ots2pms/cancelpaybyerror</cancelpaybyerror>
+                <addpay>https://smlt-otai.imike.cn/otai/ots2pms/addpay</addpay>
+                <cancelpay>https://smlt-otai.imike.cn/otai/ots2pms/cancelpay</cancelpay>
+                <selectCustomerpay>https://smlt-otai.imike.cn/otai/ots2pms/selectcustomerpay</selectCustomerpay>
+                <cancelpaybyerror>https://smlt-otai.imike.cn/otai/ots2pms/cancelpaybyerror</cancelpaybyerror>
                 <!-- 1：开发状态 2：生产状态 -->
                 <baidumessage_DeployStatus>1</baidumessage_DeployStatus>
                 <inform_sale_url><![CDATA[http://sms.imike.cn/BMS_WEIXINMESSAGE_SALESINTERFACE.saveAndSendMessage.do?OTAOrderId=]]></inform_sale_url>
