--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1551,26 +1551,26 @@
                 <hessian_soap>http://10.10.108.139:8080/soap/hessian</hessian_soap>
                 <hessian_bms>http://sale.imike.com</hessian_bms>
                 <!-- 线上 -->
-                <!--<newpms.url>https://otai.imike.com/otai/ots2pms</newpms.url>-->
+                <newpms.url>https://otai.imike.com/otai/ots2pms</newpms.url>
 
                 <!-- 预迁移线上 -->
-                <newpms.url>http://hoteldev.congqipms.com/ots2pms</newpms.url>
+                <!--<newpms.url>http://hoteldev.congqipms.com/ots2pms</newpms.url>-->
 
                 <jedis.pool.maxidl>20</jedis.pool.maxidl>
                 <jedis.pool.minidl>8</jedis.pool.minidl>
                 <jedis.pool.maxtotal>500</jedis.pool.maxtotal>
 
                 <!-- 线上 -->
-                <!--<addpay>http://otai.imike.com/otai/ots2pms/addpay</addpay>-->
-                <!--<cancelpay>http://otai.imike.com/otai/ots2pms/cancelpay</cancelpay>-->
-                <!--<selectCustomerpay>http://otai.imike.com/otai/ots2pms/selectcustomerpay</selectCustomerpay>-->
-                <!--<cancelpaybyerror>http://otai.imike.com/otai/ots2pms/cancelpaybyerror</cancelpaybyerror>-->
+                <addpay>http://otai.imike.com/otai/ots2pms/addpay</addpay>
+                <cancelpay>http://otai.imike.com/otai/ots2pms/cancelpay</cancelpay>
+                <selectCustomerpay>http://otai.imike.com/otai/ots2pms/selectcustomerpay</selectCustomerpay>
+                <cancelpaybyerror>http://otai.imike.com/otai/ots2pms/cancelpaybyerror</cancelpaybyerror>
 
-                <!-- 预迁移线上 -->
-                <addpay>http://hoteldev.congqipms.com/ots2pms/addpay</addpay>
-                <cancelpay>http://hoteldev.congqipms.com/ots2pms/cancelpay</cancelpay>
-                <selectCustomerpay>http://hoteldev.congqipms.com/ots2pms/selectcustomerpay</selectCustomerpay>
-                <cancelpaybyerror>http://hoteldev.congqipms.com/ots2pms/cancelpaybyerror</cancelpaybyerror>
+                <!--&lt;!&ndash; 预迁移线上 &ndash;&gt;-->
+                <!--<addpay>http://hoteldev.congqipms.com/ots2pms/addpay</addpay>-->
+                <!--<cancelpay>http://hoteldev.congqipms.com/ots2pms/cancelpay</cancelpay>-->
+                <!--<selectCustomerpay>http://hoteldev.congqipms.com/ots2pms/selectcustomerpay</selectCustomerpay>-->
+                <!--<cancelpaybyerror>http://hoteldev.congqipms.com/ots2pms/cancelpaybyerror</cancelpaybyerror>-->
 
                 <inform_sale_url><![CDATA[http://sale.imike.com/BMS_WEIXINMESSAGE_SALESINTERFACE.saveAndSendMessage.do?OTAOrderId=]]></inform_sale_url>
                 <wx_type>wechat</wx_type>
