--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,9 @@
 		<filter-class>com.mk.ots.system.interceptor.CrossDomainFilter</filter-class>
 		<init-param>
 			<param-name>crossDomainPatterns</param-name>
-			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck,/ticket/nologintryluck,/verifycode/send,/verifycode/verify,/unionidandphone/check,/ticket/uuid,/ticket/queryallluck,/ticket/prizebindingphone,/promo/onedollarlist </param-value>
+			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck
+				,/ticket/nologintryluck,/verifycode/send,/verifycode/verify,/unionidandphone/check,/ticket/uuid
+				,/ticket/queryallluck,/ticket/prizebindingphone,/promo/onedollarlist,/hotel/querytypelist </param-value>
 		</init-param>
 	</filter>
 
