--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 			,/picurl,/appstatus,/schedule,/hms,/order/changeprice,/pay/alires,/pay/hmsfindpay,/pay/wxres,/pay/alicancel,/pay/weixin,/message/report
 			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend,/roomsale,/hotel/updatemikepricecache,/promo,/promo/querytypelist
 			,/admin/report/launchPromo,/admin/report,/ticket/tryluck,/ticket/nologintryluck,/ticket/uuid,/ticket/queryallluck,/ticket/prizebindingphone,/hotel/front/querylist
-			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/promo/onedollarlist
+			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/promo/onedollarlist,/indexer/drop
 			</param-value>
 		</init-param>
 	</filter>
