add crossdomian for college

--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -35,8 +35,7 @@
 			,/picurl,/appstatus,/schedule,/hms,/order/changeprice,/pay/alires,/pay/hmsfindpay,/pay/wxres,/pay/alicancel,/pay/weixin,/message/report
 			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend,/roomsale,/hotel/updatemikepricecache,/promo,/promo/querytypelist
 			,/admin/report/launchPromo,/admin/report,/ticket/tryluck,/ticket/nologintryluck,/ticket/uuid,/ticket/queryallluck,/ticket/prizebindingphone,/hotel/front/querylist
-
-			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/homepage/themes,/homepage/popular,/promo/onedollarlist,/admin/indexer/drop,/sys/viewevent
+			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/homepage/themes,/homepage/popular,/promo/onedollarlist,/admin/indexer/drop,/sys/viewevent,/promo/college
 
 			</param-value>
 		</init-param>
@@ -54,7 +53,7 @@
 			<param-name>crossDomainPatterns</param-name>
 			<param-value>/recommend/query,/recommend/querydetail,/unionidandphone/binding,/ticket/tryluck
 				,/ticket/nologintryluck,/verifycode/send,/verifycode/verify,/unionidandphone/check,/ticket/uuid
-				,/ticket/queryallluck,/ticket/prizebindingphone,/promo/onedollarlist,/hotel/querytypelist </param-value>
+				,/ticket/queryallluck,/ticket/prizebindingphone,/promo/onedollarlist,/hotel/querytypelist,/promo/college </param-value>
 		</init-param>
 	</filter>
 
