--- a/ots-web/pom.xml
+++ b/ots-web/pom.xml
@@ -1448,7 +1448,7 @@
                 <synserver.ip>10.10.184.168</synserver.ip>
                 <synserver.port>8000</synserver.port>
                 <elasticsearch.clusterhosts>10.10.187.102:9300</elasticsearch.clusterhosts>
-                <elasticsearch.clustername>ota2-test-elastic</elasticsearch.clustername>
+                <elasticsearch.clustername>ots-dev-elasticsearch-1</elasticsearch.clustername>
                 <elasticsearch.index>ots</elasticsearch.index>
                 <elasticsearch.type>hotel</elasticsearch.type>
                 <hessian_soap>http://10.10.171.96:8080/soap/hessian</hessian_soap>
@@ -1496,7 +1496,7 @@
                 <synserver.ip>10.10.124.247</synserver.ip>
                 <synserver.port>8000</synserver.port>
                 <elasticsearch.clusterhosts>10.10.187.102:9300</elasticsearch.clusterhosts>
-                <elasticsearch.clustername>ots-dev-elasticsearch-1</elasticsearch.clustername>
+                <elasticsearch.clustername>smlt-elasticsearch</elasticsearch.clustername>
                 <elasticsearch.index>ots</elasticsearch.index>
                 <elasticsearch.type>hotel</elasticsearch.type>
                 <hessian_soap>http://10.10.126.121:8080/soap/hessian</hessian_soap>
