--- a/ots-web/src/main/webapp/WEB-INF/web.xml
+++ b/ots-web/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,8 @@
 			,/picurl,/appstatus,/schedule,/hms,/order/changeprice,/pay/alires,/pay/hmsfindpay,/pay/wxres,/pay/alicancel,/pay/weixin,/message/report
 			,/ticket/activeforwardcount,/app/checkupdate,/search/,/recommend,/roomsale,/hotel/updatemikepricecache,/promo,/promo/querytypelist
 			,/admin/report/launchPromo,/admin/report,/ticket/tryluck,/ticket/nologintryluck,/ticket/uuid,/ticket/queryallluck,/ticket/prizebindingphone,/hotel/front/querylist
-			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/homepage/themes,/homepage/popular,/promo/onedollarlist,/admin/indexer/drop,/sys/viewevent,/promo/college,/wechat/roomstate/querypmsprices
+			,/admin/indexer/init,/indexer/positioninit,/homepage/promolist,/homepage/themes,/homepage/popular,/promo/onedollarlist,/admin/indexer/drop
+				,/sys/viewevent,/promo/college,/wechat/roomstate/querypmsprices, /dynamicprice/base, /dynamicprice/average, /dynamicprice/min
 
 			</param-value>
 		</init-param>
